	* Installer: started implementation of image checks
	* Installer: prepared codebase for third party patches

2008-01-20  Ingo Renner  <ingo@typo3.org>

	* fixed bug #7211: "Start in Module" does not work anymore
	* fixed check for wrong implementation of toolbarItem interface
	* renamed typo3/css/verticalmenu.css to modulemenu.css

2008-01-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature: Various enhancements to image dialog in htmlArea RTE
	* Fixed bug #3957: picture drag and drop throws you out of the tab navigation
	* Fixed bug #5490: Drag 'n drop javascript error / blank screen in IE
	* Added feature #5885: Default image class
	* Added feature #5902: Removing style attribute for images
	* Added feature #6115: Enabling configuration of the "edit image" dialogue

2008-01-19  Ingo Renner  <ingo@typo3.org>

	* added a way to overwrite / skin the css files in backend.php

2008-01-18  Oliver Hader  <oh@inpublica.de>

	* (tweak) Fixed bug: Removed unused inclusion of typo3/js/ajax.js in typo3/backend.php

2008-01-17  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7196: Status of block element buttons not updated in htmlArea RTE toolbar

2008-01-17  Oliver Hader  <oh@inpublica.de>

	* (major) Fixed bug #7177: Page tree is not working in IE6/IE7
	* (minor) Fixed bug #7184: Login has probably expired, when you create a new page (only in Safari and Internet Explorer)

2008-01-17  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7165: CSH bubble help white on white in Web > List view (Thanks to Francois Suter)

2008-01-17  Ingo Renner  <ingo@typo3.org>

	* fixed bug #7178: GUI of new backend is mixed up in IE6

2008-01-16  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug: Missing try/catch for actionChecks in TBE_EDITOR

2008-01-16  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0alpha3

2008-01-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
